--- a/docs/pages/common_issues.mdx
+++ b/docs/pages/common_issues.mdx
@@ -8,6 +8,10 @@ Just make sure that you have a single lock file in the root of your project.
 
 If you use a version of nextjs >= 13.4.12, you'll need to use an open-next version >= 2.1
 
+#### My api route are returning empty response and i'm using sentry
+
+If you are using sentry, API routes returns empty body. You could try configuring sentry to ignore API routes. You can read more about it [here](https://docs.sentry.io/platforms/javascript/guides/nextjs/manual-setup/?opt-out-of-auto-instrumentation-on-specific-routes)
+
 #### My ISR page has this cache-control header `s-maxage=2, stale-while-revalidate=2592000`
 
 Given how ISR works, while waiting for the revalidation to happen, the page will be served using this cache control header. This prevent your server from being overloaded by a lot of requests while the revalidation is done. You can read more about it [here](/inner_workings/isr).
