--- a/docs/pages/v3/index.mdx
+++ b/docs/pages/v3/index.mdx
@@ -6,7 +6,7 @@ import { Callout } from 'nextra/components'
   
   `open-next@3.0.0-rc.1` is here!!! Please report any issues you find on [discord](https://discord.com/channels/983865673656705025/1164872233223729152) or on the github [PR](https://github.com/sst/open-next/pull/327)
   
-  It also requires an updated version of the iac tools that you use, see the sst PR [here]() for more information
+  It also requires an updated version of the IAC tools that you use, see the sst PR [here](https://github.com/sst/sst/pull/3567) for more information
 </Callout>
 
 ## What's new in V3?
