fix: make invalidateCFPaths async function in docs

--- a/docs/pages/common_issues/isr.mdx
+++ b/docs/pages/common_issues/isr.mdx
@@ -30,7 +30,7 @@ import { CloudFrontClient, CreateInvalidationCommand } from "@aws-sdk/client-clo
 
 const cloudFront = new CloudFrontClient({});
 
-function invalidateCFPaths(paths: string[]) {
+async function invalidateCFPaths(paths: string[]) {
   cloudFront.send(
     new CreateInvalidationCommand({
       // Set CloudFront distribution ID here
