--- a/docs/pages/common_issues/isr.mdx
+++ b/docs/pages/common_issues/isr.mdx
@@ -30,15 +30,15 @@ import { CloudFrontClient, CreateInvalidationCommand } from "@aws-sdk/client-clo
 
 const cloudFront = new CloudFrontClient({});
 
-function invalidateCFPaths(paths: string[]) {
-  cloudFront.send(
+async function invalidateCFPaths(paths: string[]) {
+  await cloudFront.send(
     new CreateInvalidationCommand({
       // Set CloudFront distribution ID here
       DistributionId: distributionId,
       InvalidationBatch: {
         CallerReference: `${Date.now()}`,
         Paths: {
-          Quantity: paths.length,
+          Quantity: paths.length,git@github.com:sommeeeer/open-next.git
           Items: paths,
         },
       },
