--- a/docs/pages/get_started.mdx
+++ b/docs/pages/get_started.mdx
@@ -10,6 +10,12 @@ The easiest way to deploy OpenNext to AWS is with [SST](https://docs.sst.dev/sta
 
 For more information, check out the SST docs: https://docs.sst.dev/start/nextjs
 
+### Ion
+
+You can also deploy OpenNext to AWS using [Ion](https://ion.sst.dev/). 
+
+Check out the [Ion Docs](https://ion.sst.dev/docs/start/nextjs/)
+
 ### Other Frameworks
 
 The OpenNext community has contributed deployment options for a few other frameworks.
