--- a/docs/pages/inner_workings.mdx
+++ b/docs/pages/inner_workings.mdx
@@ -11,11 +11,13 @@ The build output is then transformed into a format that can be deployed to AWS. 
 ```bash
 my-next-app/
   .open-next/
-    cache/                         -> ISR cache files to upload to an S3 Bucket
-    assets/                        -> Static files to upload to an S3 Bucket
-    server-function/               -> Handler code for server Lambda Function
-    revalidation-function/         -> Handler code for revalidation Lambda Function
-    image-optimization-function/   -> Handler code for image optimization Lambda Function
-    warmer-function/               -> Cron job code to keep server function warm
-    dynamo-provider/               -> Code for a CDK custom resource to populate a DynamoDB table
+    cache/                         -> ISR cache files to upload - This cannot be directly served
+    assets/                        -> Static files to upload
+    server-functions/
+      default/                     -> Handler code for the default server
+      other-fn/                    -> Handler code for another backend
+    revalidation-function/         -> Handler code for revalidation backend
+    image-optimization-function/   -> Handler code for image optimization backend
+    warmer-function/               -> Cron job code to keep server function warm - Not mandatory
+    dynamo-provider/               -> Code for a custom resource to populate the Tag Cache - Only necessary for app dir
 ```
