--- a/docs/pages/config.mdx
+++ b/docs/pages/config.mdx
@@ -1,9 +1,11 @@
-Here is a simple example of an `open-next.config.ts` file: 
+Since V3 you don't pass build options using args anymore, you need to create a file called `open-next.config.ts` at the root of your project, and export a default object that satisfies the `OpenNextConfig` interface. You can also pass another file using the `--config-path` args.
+
+Here is a detailed example of an `open-next.config.ts` file: 
 This file need to be at the same place as your `next.config.js` file
 
 `server` in here could refer to a lambda function, a docker container, a node server or whatever that can support running nodejs code. (Even cloudflare workers in the future)
 
-For more information about the options here, just look at the source file
+For more information about the options here, take a look at the [components section](/components/overview).
 
 ```ts
 import type { OpenNextConfig } from 'open-next/types/open-next'
@@ -20,8 +22,10 @@ const config = {
         }
       })
     },
+    minify: true, // This will minify the output
   },
   // Below we define the functions that we want to deploy in a different server
+  // This is only used if you want to split the server into multiple servers
   functions: { 
     ssr: {
       routes: [
@@ -33,15 +37,19 @@ const config = {
       override: {
         wrapper: "aws-lambda-streaming",
       },
-      experimentalBundledNextServer: true // This enables the bundled next server which is faster and reduce the size of the server
+      // This enables the bundled next server which is faster and reduce the size of the server
+      // This is also experimental and might not work in all cases
+      experimentalBundledNextServer: true 
     },
     pageSsr: {
       routes: ["pages/pageSsr"], // For page dir routes should be in the form `pages/${route}` without the extension, it should match the filesystem
+      // BUILD_ID is a special case, it will be replaced with the actual build id
       patterns: [ 'pageSsr', "_next/data/BUILD_ID/pageSsr.json"],
       override: {
         wrapper: "node",
         converter: "node",
         // This is necessary to generate the dockerfile and for the implementation to know that it needs to deploy on docker
+        // You can also provide a string here which will be used to create the dockerfile
         generateDockerfile: true,
       },
     },
@@ -58,10 +66,40 @@ const config = {
   // It could be in lambda@edge, cloudflare workers, or anywhere else
   // By default it uses lambda@edge
   // This is not implemented in the reference construct implementation.
+  // This is optional, but might be necessary if you split your app into multiple servers
   middleware: {
     external: true 
   }
+
+  // Optional
+  imageOptimization: {
+    // This is the architecture of the image, it could be x64 or arm64
+    // This is necessary to bundle the proper version of sharp
+    arch: "x64", 
+  }
+
+  // If you want to override the default build command, you can do it here
+  // By default it uses `npm run build`
   buildCommand: "echo 'hello world'",
+
+  dangerous: {
+    // This will disable the tag cache
+    // You can use it safely on page router, on app router it will break revalidateTag and revalidatePath
+    disableTagCache: true, 
+    // This will disable the incremental cache
+    // This is generally not recommended, as this is necessary for ISR AND SSG routes as well as the fetch cache
+    disableIncrementalCache: true, 
+  }
+
+  //The path to the target folder of build output from the `buildCommand` option (the path which will contain the `.next` and `.open-next` folders). This path is relative from the current process.cwd() - Optional default to "."
+  buildOutputPath: "build", 
+
+  //The path to the root of the Next.js app's source code. This path is relative from the current process.cwd(). - Optional default to "."
+  appPath: "app",
+
+  //The path to the package.json file of the Next.js app. This path is relative from the current process.cwd(). - Optional
+  packageJsonPath: "package.json",
+
 } satisfies OpenNextConfig
 
 export default config;
