--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,8 +1,14 @@
 import {SITE} from "../config"
+import { Callout } from 'nextra/components'
+
+<Callout>
+This docs is for the V3 of OpenNext. If you are looking for the V2 docs, you can find them [here](/v2).
+</Callout>
 
 ### Open source Next.js adapter
 
 ---
+
 
 OpenNext takes the Next.js build output and converts it into packages that can be deployed  across a variety of environments. 
 Natively OpenNext has support for AWS Lambda and classic Node Server. It also offer partial support for the `edge` runtime in Cloudflare Workers.
