--- a/docs/pages/inner_workings/components/overview.mdx
+++ b/docs/pages/inner_workings/components/overview.mdx
@@ -1,3 +1,11 @@
+import { Callout } from 'nextra/components'
+
+<Callout>
+  This documentation is still a work in progress. Some parts might be missing or incomplete.
+
+  This is also mostly for advanced use cases (Overriding some default, provide support for another Cloud provider, creating your own IAC component ...), most people won't need to use this.
+</Callout>
+
 ## Backends
 
 Every backend is a separate module. The following backends are available:
