--- a/docs/pages/reference-implementation.mdx
+++ b/docs/pages/reference-implementation.mdx
@@ -1,15 +1,14 @@
 import { Callout } from 'nextra/components'
 
-In order to help testing the rc release, we created a simple reference implementation using aws-cdk.
+In order to help deploying OpenNext with your own IAC implementation, we created a simple reference implementation using aws-cdk.
 
 If you wish to use it, just copy the code for the construct below. If you use it inside sst, make sure to use the same version of aws-cdk as sst.
 
 <Callout type="warning" emoji="⚠️">
 
-  This is a reference implementation, and it is not meant to be used in production.
+  This is a reference implementation, and it is not meant to be used in production as is.
 
-  The goal is to help with the adoption of the rc release, and to gather feedback from the community.
-  It also serves as a good example of how to use the new features.
+	This is just here to help you understand how to use the new features of OpenNext.
 
   There is some features that are not implemented like the warmer function, or everything related to lambda@edge(It requires inserting env variables which is out of scope of this implementation).
 </Callout>
