--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -3,6 +3,8 @@ import { Callout } from 'nextra/components'
 
 <Callout>
 This docs is for the V3 of OpenNext. If you are looking for the V2 docs, you can find them [here](/v2).
+
+If you're migrating from V2 to V3, you can find the migration guide [here](/migration#from-opennext-v2).
 </Callout>
 
 ### Open source Next.js adapter
