--- a/docs/pages/config/custom_overrides.mdx
+++ b/docs/pages/config/custom_overrides.mdx
@@ -1,8 +1,21 @@
+import { Callout } from 'nextra/components'
+
 In some cases the simple example is not enough, and you want to add more customization to your server. This is where the lazy loaded overrides come in. You can override any part of the server by providing a function that returns a promise that resolves to the override object. This is useful when you want to add custom logic to your server, like adding a custom queue, or adding a custom converter.
+
+<Callout>
+Be careful if you use the edge runtime (either in a function or by using the external middleware), we do 2 compilations of the `open-next.config.ts`, one for node and one for the edge runtime. If you're using some custom overrides, you likely want to add 
+```ts
+edgeExternals: ['./customWrapper', './anyOtherOverrideUsed']
+```
+to your `open-next.config.ts` to avoid the edge runtime to try to compile overrides that are not compatible with the edge runtime.
+
+</Callout>
 
 ## Custom converter
 
 Sometimes you might want to modify the object received by OpenNext. For example `Config.YOUR_SECRET_KEY` from sst cannot be used in the middleware, so you might want to add it to the headers. This is where the custom converter comes in. You can add a custom converter to modify the object before it is passed to OpenNext. 
+
+You'll still have to use a fallback value during dev as this is not used by the dev server.
 
 ```ts
 // customConverter.ts
@@ -51,8 +64,116 @@ const config = {
 ```
 
 ## Custom wrapper
+Here we provide a few examples for some custom wrapper.
+
+### Define a global to use node in the middleware
+
+```ts
+// customWrapper.ts
+import defaultWrapper from 'open-next/wrappers/aws-lambda.js'
+
+//Here you can define some globals
+declare global {
+  var myApi: () => Promise<number>;
+}
+globalThis.myApi = async () => {
+  const crypto = await import('crypto')
+  return {
+    nb: crypto.randomInt(0, 100)
+  }
+}
+
+export default defaultWrapper
+```
+
+```ts
+// open-next.config.ts
+import type { OpenNextConfig } from 'open-next/types/open-next'
+const config = {
+  default: {
+    override: {
+      wrapper: () => import('./customWrapper').then((mod) => mod.default)
+    }
+  }
+} as OpenNextConfig
+export default config
+```
+But since Next dev server runs in a fake edge runtime and that the global is defined only for deployment, you'll have to mock the global in your middleware.
+
+```ts
+// middleware.ts
+import { NextResponse } from 'next/server'
+import type { NextRequest } from 'next/server'
+
+// Here you need to mock the global if not present
+// One way to avoid issues with different implementation would be to create an api endpoint 
+// that uses the exact same logic as the global you defined earlier, 
+// and that is only available during development i.e. /api/dev/myApi
+if(!globalThis.myApi) {
+  globalThis.myApi = async () => {
+    return await fetch('http://localhost:3000/api/dev/myApi').then(res => res.json())
+  }
+}
+
+export function middleware(request: NextRequest) {
+  // You can also send an error in the api endpoint itself
+  // Or you could add all the dev endpoint in their own lambda 
+  // that you do not deploy in production
+  if(request.nextUrl.pathname.startsWith('/api/dev') && process.env.NODE_ENV === 'production') {
+    return NextResponse('This route is only available in development',{
+      status: 500,
+    })
+  }
+  // Now you can use Node.js in your middleware
+  const {nb} = await myApi()
+
+  // ... your code here
+}
+ 
+```
+
+
+### Use middy.js with the wrapper
+
+```ts
+// customWrapper.ts
+import streamingWrapper from 'open-next/wrappers/aws-lambda.js'
+import {WrapperHandler} from 'open-next/types/open-next'
+import middy from '@middy/core'
+import httpSecurityHeaders from '@middy/http-security-headers'
+
+const handler : WrapperHandler = async (handler, converter) => {
+  const defaultHandler = await streamingWrapper.wrapper(handler, converter)
+  return middy()
+  .use(httpSecurityHeaders())
+  .handler(defaultHandler)
+}
+
+export default {
+  wrapper: handler,
+  name: "custom-aws-lambda",
+  supportStreaming: false,
+};
+```
+
+```ts
+// open-next.config.ts
+import type { OpenNextConfig } from 'open-next/types/open-next'
+const config = {
+  default: {
+    override: {
+      wrapper: () => import('./customWrapper').then((mod) => mod.default)
+    }
+  }
+} as OpenNextConfig
+export default config
+```
+
+### Preload some routes during warmer event
 
 In this example the custom wrapper is used to preload some important routes before the first request. This is useful if you have some routes that are slow on coldstart (Next lazily load the routes only when they are needed) and you want to preload them before the first request. This is also useful if you want to add some custom logic to the server, like adding a custom header to the response.
+
+**WARNING**: This one is not properly tested. It's just an example of what you could do. You should test it properly before using it in production. Also preloading too many routes is probably a bad idea.
 
 
 ```ts
