fix redirect to correct ion link

--- a/docs/pages/get_started.mdx
+++ b/docs/pages/get_started.mdx
@@ -14,7 +14,7 @@ For more information, check out the SST docs: https://docs.sst.dev/start/nextjs
 
 You can also deploy OpenNext to AWS using [Ion](https://ion.sst.dev/). 
 
-Check out the [Ion Docs](https://ion.sst.dev/docs/start/nextjs/)
+Check out the [Ion Docs](https://ion.sst.dev/docs/component/aws/nextjs/)
 
 ### Other Frameworks
 
